--- a/Projeto_portifolio/web.config
+++ b/Projeto_portifolio/web.config
@@ -3,7 +3,7 @@
   <location path="." inheritInChildApplications="false">
     <system.webServer>
       <handlers>
-        <add name="aspNetCore" path="*" verb="*" modules="AspNetCoreModuleV2" resourceType="Unspecified" />
+        <add name="aspNetCore" path="*" verb="*" modules="AspNetCoreModule" resourceType="Unspecified" />
       </handlers>
       <aspNetCore processPath="%LAUNCHER_PATH%" arguments="%LAUNCHER_ARGS%" stdoutLogEnabled="false" hostingModel="InProcess">
         <environmentVariables>
